--- a/index.html
+++ b/index.html
@@ -2,20 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Stack Up</title>
+    <script src="./main.js" type="module"></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>Stack up</header>
     <div class="computer-deck deck"></div>
-    <div class="computer-card-slot card-stack"></div>
+    <div class="computer-card-slot card-slot"></div>
     <div class="text"></div>
-    <div class="center-deck deck"></div>
-    <div class="center-card-slot deck"></div>
     <div class="player-deck deck"></div>
-    <div class="player-card-slot card-stack"></div>
-    <script src="./main.js"></script>
+    <div class="player-card-slot card-slot"></div>
   </body>
 </html>
