--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <div class="text"></div>
     <div class="player-deck deck"></div>
     <div class="player-card-slot card-slot"></div>
-    <div class="player-name name">Player</div>
+    <div class="player-name name">Player!</div>
   </body>
 </html>
